# projects

./: .gitignore  README.md
MQTT/rp2040/: ARCHITECTURE.md  README.md
MQTT/rp2040/components/: CMakeLists.txt  build.sh
MQTT/rp2040/components/actuators/: CMakeLists.txt
MQTT/rp2040/components/actuators/relay/: CMakeLists.txt
MQTT/rp2040/components/actuators/relay/inc/: relay.h
MQTT/rp2040/components/actuators/relay/src/: relay.c
MQTT/rp2040/components/actuators/servo/: CMakeLists.txt
MQTT/rp2040/components/actuators/tm1637/: CMakeLists.txt  CMakeLists.txt.testmain.cpp  README.md  build.sh  main.cpp
MQTT/rp2040/components/actuators/tm1637/inc/: tm1637.h
MQTT/rp2040/components/actuators/tm1637/src/: tm1637.cpp
MQTT/rp2040/components/sensors/: CMakeLists.txt
MQTT/rp2040/components/sensors/adc_sensor/: README.md  build.sh  main.c
MQTT/rp2040/components/sensors/bmp280/: CMakeLists.txt  README.md  main.c
MQTT/rp2040/components/sensors/dht22/: CMakeLists.txt  README.md  main.c
MQTT/rp2040/components/sensors/dht22/inc/: dht22.h
MQTT/rp2040/components/sensors/dht22/src/: dht22.c
MQTT/rp2040/components/sensors/ds18b20/: README.md  main.c
MQTT/rp2040/components/wifi_mqtt/: CMakeLists.txt
MQTT/rp2040/components/wifi_mqtt/inc/: debug_log.h  esp01.h  mqtt_client.h  serial_bridge.h  uart_comm.h
MQTT/rp2040/components/wifi_mqtt/src/: debug_log.cpp  esp01.cpp  mqtt_client.cpp  serial_bridge.cpp  uart_comm.cpp
MQTT/rp2040/projects/connectBroker/: .gitignore  CMakeLists.txt  build.sh
MQTT/rp2040/projects/connectBroker/docs/: README.md
MQTT/rp2040/projects/connectBroker/inc/: config.h
MQTT/rp2040/projects/connectBroker/src/: main.cpp
MQTT/rp2040/projects/displayTM1637/: CMakeLists.txt  build.sh  deploy.sh
MQTT/rp2040/projects/displayTM1637/docs/: README.md
MQTT/rp2040/projects/displayTM1637/inc/: config.h  main.h
MQTT/rp2040/projects/displayTM1637/src/: main.cpp
blink_led/: README.md
blink_led/arduino/: README.md  blink_led.ino
blink_led/esp32/: README.md  blink_led.ino  main.c
blink_led/stm32/: README.md  main.c
